2009-07-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Post-release (is pre-release...)

2009-07-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Prepare for releasing version 5.7

2009-07-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* main.c: Add my name to the copyright output when being verbose.

2009-07-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Shaun Jackman  <sjackman@gmail.com>
	bug #21798: Fix both XSLT scripts
	* tools/get-dw-params.xsl (format-hex): Add the parameter count.
	* tools/get-hv-params.xsl (format_cstack): Ditto.

2009-07-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #21922: ATmega163 still not working in version 5.5
	* avrdude.conf.in (atmega163): fill in stk500v2 parameters, correct
	some flash programming parameters as well.

2009-07-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #22206: avrdude: ser_setspeed(): tcsetattr() failed
	* ser_posix.c (ser_setspeed): Don't pass TCSAFLUSH to tcsetattr() as
	it apparently fails to work on Solaris.  After reading the
	documentation again, it seems TCSAFLUSH and TCSANOW are indeed
	mutually exclusive.

2009-07-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #22234: WINDOWS version: HOWTO: Specify Serial Ports Larger than COM9
	* ser_win32.c (ser_open): prepend \\.\ to any COM port name, so it is
	safe to be used for COM ports above 9.

2009-07-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #26408: Crash in stk500v2_open()
	* stk500generic.c: Implement setup and teardown hooks, calling in turn
	the respective hooks of the stk500v2 implementation.

2009-07-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #26130: Avrdude doesn't display it's version.
	* main.c (usage): add a version number display to the default usage
	message.

2009-07-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #26412: avrdude segfaults when called with a programmer that does not
	support it
	* main.c: do not call pgm->perform_osccal() unless it is != 0.
